<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.robillo.droughtprotect.ui.activities.login_register.LoginRegisterActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/header"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:paddingTop="10sp"
            android:gravity="start|center_vertical"
            android:paddingBottom="10sp"
            android:textStyle="bold"
            android:text="@string/login"/>

    </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/login_layout"
            tools:visibility="gone"
            android:layout_marginTop="20sp">

            <!--<ImageView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="5sp"-->
                <!--android:background="@color/black"-->
                <!--tools:ignore="ContentDescription,SmallSp" />-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:paddingStart="10sp"
                android:gravity="start"
                android:textStyle="bold"
                android:text="@string/email_id"
                android:paddingLeft="10sp"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:layout_width="100sp"
                android:layout_height="2sp"
                android:background="@color/black"
                tools:ignore="ContentDescription,SmallSp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_login"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email"
                android:textColor="@color/black"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:textSize="20sp"
                android:textColorHint="@color/black"
                android:backgroundTint="@color/black"
                tools:ignore="UnusedAttribute"
                android:gravity="start"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:paddingStart="10sp"
                android:gravity="start"
                android:textStyle="bold"
                android:text="@string/password"
                android:paddingLeft="10sp"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:layout_width="100sp"
                android:layout_height="2sp"
                android:background="@color/black"
                tools:ignore="ContentDescription,SmallSp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password_login"
                android:inputType="textPassword"
                android:hint="@string/hint_password"
                android:textColor="@color/black"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:textSize="20sp"
                android:textColorHint="@color/black"
                android:backgroundTint="@color/black"
                tools:ignore="UnusedAttribute"
                android:gravity="start"/>

            <!--<ImageView-->
                <!--android:layout_marginTop="20sp"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="2sp"-->
                <!--android:background="@color/black"-->
                <!--tools:ignore="ContentDescription,SmallSp" />-->

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardElevation="5sp"
                android:layout_marginTop="20sp"
                app:cardCornerRadius="20sp"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30sp"
                    android:layout_marginRight="30sp"
                    android:text="@string/submit"
                    android:id="@+id/login"
                    android:textSize="22sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="10sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:background="?attr/selectableItemBackground"/>

            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/go_to_register"
                android:text="@string/go_to_register"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:paddingStart="10sp"
                android:layout_margin="10sp"
                android:gravity="center_horizontal"
                android:textStyle="italic"
                android:paddingLeft="10sp"
                tools:ignore="RtlSymmetry"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/register_layout"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_marginTop="20sp">

            <!--<ImageView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="5sp"-->
                <!--android:background="@color/black"-->
                <!--tools:ignore="ContentDescription,SmallSp" />-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:paddingStart="10sp"
                android:gravity="start"
                android:textStyle="bold"
                android:text="@string/email_id"
                android:paddingLeft="10sp"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:layout_width="100sp"
                android:layout_height="2sp"
                android:background="@color/black"
                tools:ignore="ContentDescription,SmallSp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_register"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email"
                android:textColor="@color/black"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:textSize="20sp"
                android:textColorHint="@color/black"
                android:backgroundTint="@color/black"
                tools:ignore="UnusedAttribute"
                android:gravity="start"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:paddingStart="10sp"
                android:gravity="start"
                android:textStyle="bold"
                android:text="@string/password"
                android:paddingLeft="10sp"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:layout_width="100sp"
                android:layout_height="2sp"
                android:background="@color/black"
                tools:ignore="ContentDescription,SmallSp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password_register"
                android:inputType="textPassword"
                android:hint="@string/hint_password"
                android:textColor="@color/black"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:textSize="20sp"
                android:textColorHint="@color/black"
                android:backgroundTint="@color/black"
                tools:ignore="UnusedAttribute"
                android:gravity="start"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:paddingStart="10sp"
                android:gravity="start"
                android:textStyle="bold"
                android:text="@string/confirm_password"
                android:paddingLeft="10sp"
                tools:ignore="RtlSymmetry" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/confirm_password_register"
                android:inputType="textPassword"
                android:hint="@string/hint_password"
                android:textColor="@color/black"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:textSize="20sp"
                android:textColorHint="@color/black"
                android:backgroundTint="@color/black"
                tools:ignore="UnusedAttribute"
                android:gravity="start"/>

            <!--<ImageView-->
                <!--android:layout_marginTop="20sp"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="2sp"-->
                <!--android:background="@color/black"-->
                <!--tools:ignore="ContentDescription,SmallSp" />-->

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardElevation="5sp"
                android:layout_marginTop="20sp"
                app:cardCornerRadius="20sp"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30sp"
                    android:layout_marginRight="30sp"
                    android:text="@string/submit"
                    android:id="@+id/register"
                    android:textSize="22sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="10sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:background="?attr/selectableItemBackground"/>

            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/go_to_login"
                android:text="@string/go_to_login"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:paddingStart="10sp"
                android:layout_margin="10sp"
                android:gravity="center_horizontal"
                android:textStyle="italic"
                android:paddingLeft="10sp"
                tools:ignore="RtlSymmetry"/>

        </LinearLayout>

    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>
